[project]
name = "videogamessaleseda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "ftfy==6.3.1",
    "jupyter-dark-detect==0.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "scikit-learn>=1.8.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.1",
    "pandas>=2.3.3,<3.0.0",
    "plotly[express]>=6.5.2",
]
